# robosense_skeleton_detection

./: .gitignore  README.md  README_CN.md
src/rs_log/: CMakeLists.txt  package.xml
src/rs_log/include/rs_log/: init.h  state.h
src/rs_log/include/rs_log/base/: macros.h
src/rs_log/include/rs_log/common/: log.h  macros.h
src/rs_log/include/rs_log/glog_wrapper/: glog_wrapper.h
src/rs_log/include/rs_log/logger/: async_logger.h  log_file_object.h  logger_util.h
src/rs_log/src/: init.cc  pybinding.cc  state.cc
src/rs_log/src/glog_wrapper/: glog_wrapper.cpp
src/rs_log/src/logger/: async_logger.cc  log_file_object.cc  logger_util.cc
src/rs_motion_capture/: CHANGELOG.md  CMakeLists.txt  package.xml
src/rs_motion_capture/application/ros/: CMakeLists.txt
src/rs_motion_capture/application/ros/production/: CMakeLists.txt
src/rs_motion_capture/application/ros/production/include/production/: ros_production.h
src/rs_motion_capture/application/ros/production/src/: ros_production.cpp
src/rs_motion_capture/application/ros/rviz_display/: CMakeLists.txt
src/rs_motion_capture/application/ros/rviz_display/include/rviz_display/: ros_rviz_display.h
src/rs_motion_capture/application/ros/rviz_display/src/: ros_rviz_display.cpp
src/rs_motion_capture/application/ros2/: CMakeLists.txt
src/rs_motion_capture/application/ros2/production/: CMakeLists.txt
src/rs_motion_capture/application/ros2/production/cmake/: srcs.cmake
src/rs_motion_capture/application/ros2/production/include/production/: ros2_production.h
src/rs_motion_capture/application/ros2/production/src/: ros2_production.cpp
src/rs_motion_capture/application/ros2/rviz_display/: CMakeLists.txt
src/rs_motion_capture/application/ros2/rviz_display/cmake/: srcs.cmake
src/rs_motion_capture/application/ros2/rviz_display/include/rviz_display/: rviz_display.h
src/rs_motion_capture/application/ros2/rviz_display/src/: rviz_display.cpp
src/rs_motion_capture/config/: config.yaml
src/rs_motion_capture/config/bone/: calib_bone_front_left_chad.yaml  calib_bone_front_left_chenyao.yaml  calib_bone_front_left_forking.yaml  calib_bone_front_left_frank.yaml  calib_bone_front_left_maoshicheng.yaml  calib_bone_front_left_peter.yaml  calib_bone_front_left_wuqi.yaml  calib_bone_front_left_yangjiahao.yaml  calib_bone_front_left_yangkaiyuan.yaml  calib_bone_front_left_zed.yaml  calib_bone_front_right_chad.yaml  calib_bone_front_right_chenyao.yaml  calib_bone_front_right_forking.yaml  calib_bone_front_right_frank.yaml  calib_bone_front_right_maoshicheng.yaml  calib_bone_front_right_peter.yaml  calib_bone_front_right_wuqi.yaml  calib_bone_front_right_yangjiahao.yaml  calib_bone_front_right_yangkaiyuan.yaml  calib_bone_front_right_zed.yaml
src/rs_motion_capture/config/config_retarget/configs/: inspire_hand.yml
src/rs_motion_capture/config/rviz/: motion_capture.rviz  motion_capture_ros1.rviz  quest3.rviz  rviz.yaml
src/rs_motion_capture/config/sensor/: 1111BE070018_calibration.yaml  1111BEA70037_calibration.yaml  1111BEAA0019_calibration.yaml  1111BEAA0030_calibration.yaml  quest3_glove_calibration.yaml  sn23_calibration_20251014.yaml
src/rs_motion_capture/launch/: infrared_calib.py  infrared_ws_calib_launch.py  motion_capture_node_launch.py  motion_capture_node_ros1.launch  vr_capture_launch.py  vr_controller_glove_calib_launch.py  vr_controller_glove_calib_vis_launch.py  vr_controller_launch.py  vr_glove_capture_launch.py  vr_hand_tracking_launch.py
src/rs_motion_capture/motion_capture/: CMakeLists.txt
src/rs_motion_capture/motion_capture/cmake/: srcs.cmake
src/rs_motion_capture/motion_capture/include/motion_capture/algorithm/geometry/: kalman.h  nms.h
src/rs_motion_capture/motion_capture/include/motion_capture/algorithm/image_process/: image_process.h
src/rs_motion_capture/motion_capture/include/motion_capture/base/: base_motion_capture.h  base_pipeline.h
src/rs_motion_capture/motion_capture/include/motion_capture/common/: macros.h  message.h
src/rs_motion_capture/motion_capture/include/motion_capture/data_structure/: any_msg.h  bbox.h  image.h  joint_pose.h  point.h  point_cloud.h
src/rs_motion_capture/motion_capture/include/motion_capture/interface/: motion_capture_interface.h  pipeline_interface.h
src/rs_motion_capture/motion_capture/include/motion_capture/pipeline/: hybrid_infrared_inertial_motion_capture.h  hybrid_optical_inertial_motion_capture.h  optical_motion_capture.h
src/rs_motion_capture/motion_capture/include/motion_capture/utils/logger/: logger.h
src/rs_motion_capture/motion_capture/include/motion_capture/utils/performance/: time_recorder.h
src/rs_motion_capture/motion_capture/src/algorithm/: image_process.cu
src/rs_motion_capture/motion_capture/src/algorithm/geometry/: kalman.cpp  nms.cpp
src/rs_motion_capture/motion_capture/src/base/: base_motion_capture.cpp  base_pipeline.cpp
src/rs_motion_capture/motion_capture/src/common/: macros.cpp  message.cpp
src/rs_motion_capture/motion_capture/src/data_structure/: any_msg.cpp  bbox.cpp  point.cpp
src/rs_motion_capture/motion_capture/src/interface/: motion_capture_interface.cpp  pipeline_interface.cpp
src/rs_motion_capture/motion_capture/src/pipeline/: hybrid_infrared_inertial_motion_capture.cpp  hybrid_optical_inertial_motion_capture.cpp  optical_motion_capture.cpp
src/rs_motion_capture/motion_capture/src/utils/logger/: logger.cpp
src/rs_motion_capture/motion_capture/src/utils/performance/: time_recorder.cpp
src/rs_motion_capture/motion_capture/src/utils/sensor_manager/: sensor_manager.cpp
src/rs_motion_capture/motion_capture/src/utils/transform/: transform.cpp
src/rs_motion_capture/node/: motion_capture_node.cpp  motion_capture_node_ros1.cpp
src/rs_motion_capture/rs_motion_capture/: calib_infrared_tracker.py  calib_infrared_tracker_v2.py  quest3_glove_calib.py  quest3_glove_teleop_node.py  quest3_teleop_node.py  survive_cli.py
src/rs_motion_capture/rs_motion_capture/quest3/: controller.py  hand_tracking.py  utils.py
src/rs_motion_capture/scripts/: convert_pd.py  generate_video.py
(+38 files in other folders)
