<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rs_log</name>
  <version>0.15.13</version>
  <description>Robosense ROS Collect Softeware</description>
  <maintainer email="swhe@robosense.cn">Gavin He</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>pybind11</build_depend>

  <!-- ROS2 dependency -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_ros</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
