<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>rs_motion_capture</name>
    <version>0.0.0</version>
    <description>rs motion capture package</description>
    <maintainer email="your_email@example.com">Your Name</maintainer>
    <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>robosense_msgs</depend>
    <depend>cv_bridge</depend>
    <depend>image_transport</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>yaml-cpp</depend>
    <depend>visualization_msgs</depend>
    <depend>ament_index_cpp</depend>
    <depend>rs_log</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
